--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # NACHO BLASTER
 
-Un juego de accion espacial, en honor a mi amigo Nacho
+Un juego de accion espacial, en honor a mi amigo **Nacho**
 
 Programado en un 486 DX2 con 4 mb de RAM, fue realizado en C y Allegro
 
@@ -12,14 +12,14 @@ Ejemplos corriendo en DosBox, en Linux
 
 https://www.dosbox.com/
 
-![Screenshot](https://github.com/alvarogonzalezferrer/Blast-Nacho/blob/master/screenshots/1.jpg "Screenshot")
+![image](https://github.com/alvarogonzalezferrer/Blast-Nacho/blob/master/screenshots/1.jpg "Screenshot")
 
-![Screenshot](https://github.com/alvarogonzalezferrer/Blast-Nacho/blob/master/screenshots/2.jpg "Screenshot")
+![image](https://github.com/alvarogonzalezferrer/Blast-Nacho/blob/master/screenshots/2.jpg "Screenshot")
 
-![Screenshot](https://github.com/alvarogonzalezferrer/Blast-Nacho/blob/master/screenshots/3.jpg "Screenshot")
+![image](https://github.com/alvarogonzalezferrer/Blast-Nacho/blob/master/screenshots/3.jpg "Screenshot")
 
-![Screenshot](https://github.com/alvarogonzalezferrer/Blast-Nacho/blob/master/screenshots/4.jpg "Screenshot")
+![image](https://github.com/alvarogonzalezferrer/Blast-Nacho/blob/master/screenshots/4.jpg "Screenshot")
 
-![Screenshot](https://github.com/alvarogonzalezferrer/Blast-Nacho/blob/master/screenshots/5.jpg "Screenshot")
+![image](https://github.com/alvarogonzalezferrer/Blast-Nacho/blob/master/screenshots/5.jpg "Screenshot")
 
 
